Reorganize length plots

--- a/03-post-process/output-plots-children/05-length.Rmd
+++ b/03-post-process/output-plots-children/05-length.Rmd
@@ -120,6 +120,125 @@ mtext(side = 1, outer = T, line = 0.25, xlab)
 mtext(side = 2, outer = T, line = 0.25, TeX("$Parr\\, Mean\\, Length\\,(mm)$"))
 ```
 
+## Parr $\to$ Smolt "Growth" Factor {.tabset .tabset-pills}
+
+### Time Series {.tabset .tabset-pills}
+
+#### Realized Alone
+
+```{r Delta_L_Pb_Mb-1, fig.width = 6, fig.height = 5}
+plot_f = function(j) {
+  plot_tseries(post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]$", year = ts_yrs, pop = j)),
+               main = pops[j], yrs = all_yrs[ts_yrs], ylim = c(1,1.6))
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_f)
+mtext(side = 1, outer = T, line = 0.25, "Brood Year")
+mtext(side = 2, outer = T, line = 0.25, TeX("$Parr \\rightarrow Smolt\\,Growth\\, Factor$"))
+```
+
+#### Realized & "Data"
+
+```{r Delta_L_Pb_Mb-2, fig.width = 6, fig.height = 5}
+plot_f = function(j) {
+  Delta_L_Pb_Mb_obs = cbind(mean = jags_data$L_Mb_obs[observable,j]/jags_data$L_Pb_obs[observable,j], lwr95 = NA, upr95 = NA)
+  plot_tseries(post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]$", year = ts_yrs, pop = j)),
+               Delta_L_Pb_Mb_obs, main = pops[j], yrs = all_yrs[ts_yrs], ylim = c(1,1.6))
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_f)
+mtext(side = 1, outer = T, line = 0.25, "Brood Year")
+mtext(side = 2, outer = T, line = 0.25, TeX("$Parr \\rightarrow Smolt\\,Growth\\, Factor$"))
+```
+
+#### Realized & Predicted
+
+```{r Delta_L_Pb_Mb-3, fig.width = 6, fig.height = 5}
+plot_f = function(j) {
+  # draw the realized time series
+  plot_tseries(post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]$", year = ts_yrs, pop = j)),
+               main = pops[j], yrs = all_yrs[ts_yrs], ylim = c(1,1.6))
+  
+  # draw the predicted time series
+  add_tseries(est = post_summ(post, sub_index("^Delta_L_Pb_Mb_dot[year,pop]", pop = j, year = ts_yrs)),
+              yrs = all_yrs[ts_yrs])
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_f)
+mtext(side = 1, outer = T, line = 0.25, "Brood Year")
+mtext(side = 2, outer = T, line = 0.25, TeX("$Parr \\rightarrow Smolt\\,Growth\\, Factor$"))
+```
+
+### Relationship
+
+```{r Delta_L_Pb_Mb-relationship, fig.width = 6, fig.height = 5}
+plot_f = function(j) {
+
+  # extract posterior summaries of summer length outcomes
+  L_Pb_mean = post_summ(post, sub_index("^L_Pb[year,pop]", year = ts_yrs, pop = j))["mean",]
+  L_Pb_lwr = post_summ(post, sub_index("^L_Pb[year,pop]", year = ts_yrs, pop = j))["2.5%",]
+  L_Pb_upr = post_summ(post, sub_index("^L_Pb[year,pop]", year = ts_yrs, pop = j))["97.5%",]
+  
+  # extract posterior summaries of growth outcomes
+  Delta_L_Pb_Mb_mean = post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]", year = ts_yrs, pop = j))["mean",]
+  Delta_L_Pb_Mb_lwr = post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]", year = ts_yrs, pop = j))["2.5%",]
+  Delta_L_Pb_Mb_upr = post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]", year = ts_yrs, pop = j))["97.5%",]
+  
+  # create a vector of scaled summer lengths to calculate at
+  L_Pb_seq = seq(min(L_Pb_lwr), max(L_Pb_upr), length = 30)
+  L_Pb_star_seq = (L_Pb_seq - jags_data$L_Pb_center[j])/jags_data$L_Pb_scale[j]
+
+  # extract posteriors of coefficients
+  theta0 = post_subset(post, sub_index("theta0[pop]", pop = j), matrix = TRUE)
+  theta1 = post_subset(post, sub_index("theta1[pop]", pop = j), matrix = TRUE)
+
+  # function to create predicted curves for one posterior sample
+  pred_fn = function(i) {
+    pred_Delta_L_Pb_Mb = exp(theta0[i] + theta1[i] * L_Pb_star_seq)
+    names(pred_Delta_L_Pb_Mb) = paste0("pred_Delta_L_Pb_Mb[", 1:30, "1]")
+    pred_Delta_L_Pb_Mb
+  }
+  
+  # calculate predicted growth values and add to posterior samples
+  pred_Delta_L_Pb_Mb = t(sapply(1:post_dim(post, "saved"), pred_fn))
+  post_pred_Delta_L_Pb_Mb = post_convert(cbind(postpack:::id_mat(post), pred_Delta_L_Pb_Mb))
+  
+  # extract summarize predicted growth
+  pred_Delta_L_Pb_Mb_mean = post_summ(post_pred_Delta_L_Pb_Mb, ".")["mean",]
+  pred_Delta_L_Pb_Mb_lwr = post_summ(post_pred_Delta_L_Pb_Mb, ".")["2.5%",]
+  pred_Delta_L_Pb_Mb_upr = post_summ(post_pred_Delta_L_Pb_Mb, ".")["97.5%",]
+  
+  # make a blank plot with the correct dimensions
+  par(mgp = c(2,0.35, 0), tcl = -0.15, mar = c(1,1,2,1))
+  plot(1,1, type = "n", 
+       # ylim = range(pred_Delta_L_Pb_Mb_lwr, pred_Delta_L_Pb_Mb_upr, Delta_L_Pb_Mb_lwr, Delta_L_Pb_Mb_upr, na.rm = TRUE),
+       ylim = c(1, 1.6),
+       xlim = range(L_Pb_seq), 
+       main = pops[j]
+  )
+    
+  # expected relationship
+  polygon(c(L_Pb_seq, rev(L_Pb_seq)), c(pred_Delta_L_Pb_Mb_lwr, rev(pred_Delta_L_Pb_Mb_upr)), border = NA, col = alpha("salmon", 0.5))
+  lines(pred_Delta_L_Pb_Mb_lwr ~ L_Pb_seq, col = "red", lty = 2)
+  lines(pred_Delta_L_Pb_Mb_upr ~ L_Pb_seq, col = "red", lty = 2)
+  lines(pred_Delta_L_Pb_Mb_mean ~ L_Pb_seq, col = "red", lwd = 2)
+  
+  # realized pairs
+  segments(L_Pb_lwr, Delta_L_Pb_Mb_mean, L_Pb_upr, Delta_L_Pb_Mb_mean, col = alpha("red", 0.5))
+  segments(L_Pb_mean, Delta_L_Pb_Mb_lwr, L_Pb_mean, Delta_L_Pb_Mb_upr, col = alpha("red", 0.5))
+  points(Delta_L_Pb_Mb_mean ~ L_Pb_mean, pch = 16, col = alpha("salmon", 0.5), cex = 1.8)
+  text(Delta_L_Pb_Mb_mean ~ L_Pb_mean, labels = substr(all_yrs[ts_yrs], 3, 4), cex = 0.65, col = "black")
+}
+
+par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
+junk = sapply(1:jags_data$nj, plot_f)
+mtext(side = 1, outer = T, line = 0.25, TeX("$Parr\\, Mean\\, Length\\, (mm)$"))
+mtext(side = 2, outer = T, line = 0.25, TeX("$Parr\\, \\to\\, Smolt\\, Growth\\, Factor$"))
+```
+
 ## Smolt Mean Length {.tabset .tabset-pills}
 
 ### Time Series {.tabset .tabset-pills}
@@ -131,7 +250,7 @@ plot_f = function(j) {
   
   # draw the realized time series
   plot_tseries(est = post_summ(post, sub_index("^L_Mb[year,pop]", year = ts_yrs, pop = j)), 
-               main = pops[j], yrs = all_yrs[ts_yrs]
+               main = pops[j], yrs = all_yrs[ts_yrs], ylim = c(75,110)
   )
 }
 
@@ -190,7 +309,7 @@ plot_f = function(j) {
   
   # draw the realized time series
   plot_tseries(est = post_summ(post, sub_index("^L_Mb[year,pop]", year = ts_yrs, pop = j)), 
-               main = pops[j], yrs = all_yrs[ts_yrs]
+               main = pops[j], yrs = all_yrs[ts_yrs], ylim = c(75,110)
   )
   
   # draw the realized time series
@@ -202,124 +321,6 @@ par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
 junk = sapply(1:jags_data$nj, plot_f)
 mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Smolt Mean Length (mm)")
-```
-
-## Parr $\to$ Smolt "Growth" Factor {.tabset .tabset-pills}
-
-### Time Series {.tabset .tabset-pills}
-
-#### Realized Alone
-
-```{r Delta_L_Pb_Mb-1, fig.width = 6, fig.height = 5}
-plot_f = function(j) {
-  plot_tseries(post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]$", year = ts_yrs, pop = j)),
-               main = pops[j], yrs = all_yrs[ts_yrs], ylim = c(1,2))
-}
-
-par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
-junk = sapply(1:jags_data$nj, plot_f)
-mtext(side = 1, outer = T, line = 0.25, "Brood Year")
-mtext(side = 2, outer = T, line = 0.25, TeX("$Parr \\rightarrow Smolt\\,Growth\\, Factor$"))
-```
-
-#### Realized & "Data"
-
-```{r Delta_L_Pb_Mb-2, fig.width = 6, fig.height = 5}
-plot_f = function(j) {
-  Delta_L_Pb_Mb_obs = cbind(mean = jags_data$L_Mb_obs[observable,j]/jags_data$L_Pb_obs[observable,j], lwr95 = NA, upr95 = NA)
-  plot_tseries(post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]$", year = ts_yrs, pop = j)),
-               Delta_L_Pb_Mb_obs, main = pops[j], yrs = all_yrs[ts_yrs], ylim = c(1,2))
-}
-
-par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
-junk = sapply(1:jags_data$nj, plot_f)
-mtext(side = 1, outer = T, line = 0.25, "Brood Year")
-mtext(side = 2, outer = T, line = 0.25, TeX("$Parr \\rightarrow Smolt\\,Growth\\, Factor$"))
-```
-
-#### Realized & Predicted
-
-```{r Delta_L_Pb_Mb-3, fig.width = 6, fig.height = 5}
-plot_f = function(j) {
-  # draw the realized time series
-  plot_tseries(post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]$", year = ts_yrs, pop = j)),
-               main = pops[j], yrs = all_yrs[ts_yrs], ylim = c(1,2))
-  
-  # draw the predicted time series
-  add_tseries(est = post_summ(post, sub_index("^Delta_L_Pb_Mb_dot[year,pop]", pop = j, year = ts_yrs)),
-              yrs = all_yrs[ts_yrs])
-}
-
-par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
-junk = sapply(1:jags_data$nj, plot_f)
-mtext(side = 1, outer = T, line = 0.25, "Brood Year")
-mtext(side = 2, outer = T, line = 0.25, TeX("$Parr \\rightarrow Smolt\\,Growth\\, Factor$"))
-```
-
-### Relationship
-
-```{r Delta_L_Pb_Mb-relationship, fig.width = 6, fig.height = 5}
-plot_f = function(j) {
-
-  # extract posterior summaries of summer length outcomes
-  L_Pb_mean = post_summ(post, sub_index("^L_Pb[year,pop]", year = ts_yrs, pop = j))["mean",]
-  L_Pb_lwr = post_summ(post, sub_index("^L_Pb[year,pop]", year = ts_yrs, pop = j))["2.5%",]
-  L_Pb_upr = post_summ(post, sub_index("^L_Pb[year,pop]", year = ts_yrs, pop = j))["97.5%",]
-  
-  # extract posterior summaries of growth outcomes
-  Delta_L_Pb_Mb_mean = post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]", year = ts_yrs, pop = j))["mean",]
-  Delta_L_Pb_Mb_lwr = post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]", year = ts_yrs, pop = j))["2.5%",]
-  Delta_L_Pb_Mb_upr = post_summ(post, sub_index("^Delta_L_Pb_Mb[year,pop]", year = ts_yrs, pop = j))["97.5%",]
-  
-  # create a vector of scaled summer lengths to calculate at
-  L_Pb_seq = seq(min(L_Pb_lwr), max(L_Pb_upr), length = 30)
-  L_Pb_star_seq = (L_Pb_seq - jags_data$L_Pb_center[j])/jags_data$L_Pb_scale[j]
-
-  # extract posteriors of coefficients
-  theta0 = post_subset(post, sub_index("theta0[pop]", pop = j), matrix = TRUE)
-  theta1 = post_subset(post, sub_index("theta1[pop]", pop = j), matrix = TRUE)
-
-  # function to create predicted curves for one posterior sample
-  pred_fn = function(i) {
-    pred_Delta_L_Pb_Mb = exp(theta0[i] + theta1[i] * L_Pb_star_seq)
-    names(pred_Delta_L_Pb_Mb) = paste0("pred_Delta_L_Pb_Mb[", 1:30, "1]")
-    pred_Delta_L_Pb_Mb
-  }
-  
-  # calculate predicted growth values and add to posterior samples
-  pred_Delta_L_Pb_Mb = t(sapply(1:post_dim(post, "saved"), pred_fn))
-  post_pred_Delta_L_Pb_Mb = post_convert(cbind(postpack:::id_mat(post), pred_Delta_L_Pb_Mb))
-  
-  # extract summarize predicted growth
-  pred_Delta_L_Pb_Mb_mean = post_summ(post_pred_Delta_L_Pb_Mb, ".")["mean",]
-  pred_Delta_L_Pb_Mb_lwr = post_summ(post_pred_Delta_L_Pb_Mb, ".")["2.5%",]
-  pred_Delta_L_Pb_Mb_upr = post_summ(post_pred_Delta_L_Pb_Mb, ".")["97.5%",]
-  
-  # make a blank plot with the correct dimensions
-  par(mgp = c(2,0.35, 0), tcl = -0.15, mar = c(1,1,2,1))
-  plot(1,1, type = "n", 
-       ylim = range(pred_Delta_L_Pb_Mb_lwr, pred_Delta_L_Pb_Mb_upr, Delta_L_Pb_Mb_lwr, Delta_L_Pb_Mb_upr, na.rm = TRUE),
-       xlim = range(L_Pb_seq), 
-       main = pops[j]
-  )
-    
-  # expected relationship
-  polygon(c(L_Pb_seq, rev(L_Pb_seq)), c(pred_Delta_L_Pb_Mb_lwr, rev(pred_Delta_L_Pb_Mb_upr)), border = NA, col = alpha("salmon", 0.5))
-  lines(pred_Delta_L_Pb_Mb_lwr ~ L_Pb_seq, col = "red", lty = 2)
-  lines(pred_Delta_L_Pb_Mb_upr ~ L_Pb_seq, col = "red", lty = 2)
-  lines(pred_Delta_L_Pb_Mb_mean ~ L_Pb_seq, col = "red", lwd = 2)
-  
-  # realized pairs
-  segments(L_Pb_lwr, Delta_L_Pb_Mb_mean, L_Pb_upr, Delta_L_Pb_Mb_mean, col = alpha("red", 0.5))
-  segments(L_Pb_mean, Delta_L_Pb_Mb_lwr, L_Pb_mean, Delta_L_Pb_Mb_upr, col = alpha("red", 0.5))
-  points(Delta_L_Pb_Mb_mean ~ L_Pb_mean, pch = 16, col = alpha("salmon", 0.5), cex = 1.8)
-  text(Delta_L_Pb_Mb_mean ~ L_Pb_mean, labels = substr(all_yrs[ts_yrs], 3, 4), cex = 0.65, col = "black")
-}
-
-par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
-junk = sapply(1:jags_data$nj, plot_f)
-mtext(side = 1, outer = T, line = 0.25, TeX("$Parr\\, Mean\\, Length\\, (mm)$"))
-mtext(side = 2, outer = T, line = 0.25, TeX("$Parr\\, \\to\\, Smolt\\, Growth\\, Factor$"))
 ```
 
 ## Smolt vs. Parr Mean Length
@@ -373,7 +374,8 @@ plot_fn = function(j) {
   # make a blank plot with the correct dimensions
   par(mgp = c(2,0.35, 0), tcl = -0.15, mar = c(1,1,2,1))
   plot(1,1, type = "n", 
-       ylim = range(pred_L_Mb_lwr, pred_L_Mb_upr, L_Mb_lwr, L_Mb_upr, na.rm = T),
+       # ylim = range(pred_L_Mb_lwr, pred_L_Mb_upr, L_Mb_lwr, L_Mb_upr, na.rm = T),
+       ylim = c(75,110),
        xlim = range(L_Pb_seq), 
        main = pops[j]
   )
