--- a/03-post-process/compare-sim-to-obs.Rmd
+++ b/03-post-process/compare-sim-to-obs.Rmd
@@ -851,7 +851,7 @@ get_ratio = function(param, obs_y, sim_y, ...) {
 ```
 
 ```{r ratio_plot fn}
-ratio_plot = function(ratios, line_y, pt_fn = mean, ...) {
+ratio_plot = function(ratios, line_y, pt_fn = mean, ylim = NULL, ylab = FALSE, ...) {
   
   # calculate summaries of the ratios
   summs = apply(ratios, 2, function(x) quantile(x, c(0.025, 0.25, 0.5, 0.75, 0.975), na.rm = TRUE))
@@ -860,17 +860,29 @@ ratio_plot = function(ratios, line_y, pt_fn = mean, ...) {
   summs["50%",] = apply(ratios, 2, pt_fn)
   
   # set graphics parameters
-  par(mar = c(7,1,1,1), mgp = c(2,0.35,0), tcl = -0.15, lend = "square", ljoin = "mitre")
+  par(mar = c(7,1.25,1,1), mgp = c(2,0.35,0), tcl = -0.15, lend = "square", ljoin = "mitre")
   
   # make an empty plot with the right dimensions
-  mp = barplot(summs["50%",], col = "white", ylab = "", border = "white", las = 2,
-               ylim = c(min(0, min(summs, na.rm = TRUE)), max(summs, na.rm = TRUE)) * 1.1, ...)
+  if (is.null(ylim)) {
+    ymin = 0
+    ymax = max(2, max(summs, na.rm = TRUE) * 1.025)
+  } else {
+    ymin = ylim[1]
+    ymax = ylim[2]
+  }
+  
+  mp = barplot(summs["50%",], col = "white", xlab = "", border = "white", las = 2,
+               ylim = c(ymin, ymax), ylab = "", ...)
+  
+  if (ylab) {
+    mtext(side = 2, line = 2.25, "Ratio (Sim:Obs)")
+  }
   
   # draw tick labels
   axis(side = 1, at = mp, labels = F)
   
   # create an "acceptable region"
-  usr = par("usr"); rect(usr[1], line_y - 0.25, usr[2], line_y + 0.25, col = "grey90", border = NA)
+  usr = par("usr"); rect(usr[1], line_y - 0.2, usr[2], line_y + 0.2, col = "grey90", border = NA)
   abline(h = line_y, lty = 2, col = "grey")
   
   # draw the ratio summaries
@@ -883,17 +895,16 @@ ratio_plot = function(ratios, line_y, pt_fn = mean, ...) {
 
 ```{r ratio_plots fn}
 ratio_plots = function(x, main) {
-  par(mfrow = c(1,3), oma = c(0,2,2,0))
-  ratio_plot(x[,"sim-v-obs","cv",], main = "CV", pt_fn = geomean, line_y = 1)
+  par(mfrow = c(1,3), oma = c(0,2.5,2,0))
+  ratio_plot(x[,"sim-v-obs","cv",], main = "CV", pt_fn = geomean, line_y = 1, ylab = TRUE)
   ratio_plot(x[,"sim-v-obs","mean",], main = "Mean", pt_fn = geomean, line_y = 1)
-  ratio_plot(x[,"sim-v-obs","acf",], main = "ACF (Sim - Obs)", pt_fn = mean, line_y = 0)
-  mtext(side = 2, outer = TRUE, adj = 0.75, line = 1, "Ratio (Sim:Obs)")
+  ratio_plot(x[,"sim-v-obs","acf",], main = "ACF (Sim - Obs)", pt_fn = mean, line_y = 0, ylim = c(-1,1))
   mtext(side = 3, outer = TRUE, line = 0.5, main, cex = 1.25, font = 2)
 }
 ```
 
 ```{r vals_plot fn}
-vals_plot = function(vals, ...) {
+vals_plot = function(vals, legend = FALSE, ylab = FALSE, ...) {
   f = function(x) quantile(x, c(0.025, 0.25, 0.5, 0.75, 0.975), na.rm = TRUE) 
   
   summs = array(NA, dim = c(2,5,dim(vals)[3]))
@@ -902,23 +913,31 @@ vals_plot = function(vals, ...) {
   summs["obs",,] = apply(vals[,"obs",], 2, f)
   summs["sim",,] = apply(vals[,"sim",], 2, f)
   
-  par(mar = c(7,1,1,1), mgp = c(2,0.35,0), tcl = -0.15, lend = "square", ljoin = "mitre")
+  par(mar = c(7,1.25,1,1), mgp = c(2,0.35,0), tcl = -0.15, lend = "square", ljoin = "mitre")
   mp = barplot(summs[,"50%",], beside = TRUE, col = "white", border = "white", ylim = range(summs, na.rm = TRUE) + diff(range(summs, na.rm = TRUE)) * c(-0.05,0.05), xaxt = "n", ...)
-  segments(mp, summs[,"2.5%",], mp, summs[,"97.5%",], col = c("red", "blue"))
-  segments(mp, summs[,"25%",], mp, summs[,"75%",], col = c("red", "blue"), lwd = 6)
-  points(y = summs[,"50%",], x = mp, col = c("red", "blue"), pch = 3, cex = 1.5)
+  
+  if (ylab) {
+    mtext(side = 2, line = 2.25, "Value")
+  }
+  
+  segments(mp, summs[,"2.5%",], mp, summs[,"97.5%",], col = c("salmon", "royalblue"))
+  segments(mp, summs[,"25%",], mp, summs[,"75%",], col = c("salmon", "royalblue"), lwd = 6)
+  points(y = summs[,"50%",], x = mp, col = c("salmon", "royalblue"), pch = 3, cex = 1.5)
   axis(side = 1, at = colSums(mp)/2, labels = dimnames(summs)[[3]], las = 2)
   box()
+  
+  if (legend) {
+    legend("topleft", legend = c("Obs", "Sim"), pch = 15, col = c("salmon", "royalblue"), pt.cex = 1.75, bty = "n")
+  }
 }
 ```
 
 ```{r vals_plots fn}
 vals_plots = function(x, main) {
-  par(mfrow = c(1,3), oma = c(0,2,2,0))
-  vals_plot(x[,c("obs", "sim"),"cv",], main = "CV")
+  par(mfrow = c(1,3), oma = c(0,2.5,2,0))
+  vals_plot(x[,c("obs", "sim"),"cv",], main = "CV", legend = TRUE, ylab = TRUE)
   vals_plot(x[,c("obs", "sim"),"mean",], main = "Mean")
   vals_plot(x[,c("obs", "sim"),"acf",], main = "ACF")
-  mtext(side = 2, outer = TRUE, adj = 0.75, line = 1, "Value")
   mtext(side = 3, outer = TRUE, line = 0.5, main, cex = 1.25, font = 2)
 }
 ```
