Fix small file path bug introduced by recent changes
Very minor: I changed the output file to be called "output_scenario.rds" instead of "output-scenario.rds" in a commit as part of #185

--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -80,7 +80,7 @@ invisible(sapply(list.files(path = "../01-functions", pattern = "\\.R$", full.na
 in_dir = "../02-model/model-output"
 
 # read information from this model
-model_info = readRDS(file.path(in_dir, paste0("output-", params$scenario, ".rds")))
+model_info = readRDS(file.path(in_dir, paste0("output_", params$scenario, ".rds")))
 
 # extract the posterior samples
 # post-MCMC thinning allowed to reduce run time of this document
